added base navigation with argument passing also fix some bugs on request screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="enter_your_bin">Please enter your BIN</string>
     <string name="wrong_input">BIN should be at least 4 sings</string>
     <string name="get_info">Get info</string>
+    <string name="bin">BIN</string>
 </resources>
