--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,24 @@
     <string name="wrong_input">BIN should be at least 4 sings</string>
     <string name="get_info">Get info</string>
     <string name="bin">BIN</string>
+
+   
+    <string name="loading">Loading</string>
+    <string name="error">Error</string>
+    <string name="refresh">Refresh</string>
+    <string name="scheme_network">SCHEME/NETWORK</string>
+    <string name="type">TYPE</string>
+    <string name="debit">Debit</string>
+    <string name="credit">Credit</string>
+    <string name="brand">BRAND</string>
+    <string name="prepaid">PREPAID</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="card_number">CARD NUMBER</string>
+    <string name="length">LENGTH</string>
+    <string name="luhn">LUHN</string>
+    <string name="country">COUNTRY</string>
+    <string name="latitude">latitude</string>
+    <string name="longitude">longitude</string>
+    <string name="bank">BANK</string>
 </resources>
